--- a/beta/index.html
+++ b/beta/index.html
@@ -29,8 +29,21 @@
 		} else {
 			//none
 		}
+		getgwa();
 	}
-		
+	function changegrade(subject, amt) {
+		var value2 = parseFloat(document.getElementById(subject).innerHTML);
+		if (value2 + 0.25 * amt < 1) {
+			return 0;
+		} else if (value2 + 0.25 * amt <= 3) {
+			document.getElementById(subject).innerHTML = (value2 + 0.25 * amt).toFixed(2);
+		} else if (value2 + 0.25 * amt <= 5) {
+			document.getElementById(subject).innerHTML = (value2 + 1 * amt).toFixed(2);
+		} else {
+			//none
+		}
+		verify();
+	}
 	
     function get(id, unit) {
         return parseFloat(document.getElementById(id).innerHTML) * unit;
@@ -115,16 +128,14 @@ background-size: cover;}
 <tr><td class="magic"><input onclick="changegrade('earthsci', -1)" value="-" type="button"></td><td>EarthSci</td><td>0.7</td><td><select id="earthsci"><option value="100" selected="selected">1.00</option><option value="125">1.25</option><option value="150">1.50</option><option value="175">1.75</option><option value="200">2.00</option><option value="225">2.25</option><option value="250">2.50</option><option value="275">2.75</option><option value="300">3.00</option><option value="400">4.00</option><option value="500">5.00</option></select></td></tr>
 </tbody></table>
 -->
-
-<input onclick="getgwa()" value="Calculate" type="button">
 <br>
 <span id="gwa" style="font-weight:bold;">1.00</span>
 <hr>
 <table class="magic">
-<tbody><tr><td class="magic">Previous Quarter's Grade</td><td class="magic"><select id="old"><option value="100" selected="selected">1.00</option><option value="125">1.25</option><option value="150">1.50</option><option value="175">1.75</option><option value="200">2.00</option><option value="225">2.25</option><option value="250">2.50</option><option value="275">2.75</option><option value="300">3.00</option><option value="400">4.00</option><option value="500">5.00</option></select></td></tr>
-<tr><td class="magic">Present Quarter's Grade</td><td class="magic"><select id="new"><option value="100" selected="selected">1.00</option><option value="125">1.25</option><option value="150">1.50</option><option value="175">1.75</option><option value="200">2.00</option><option value="225">2.25</option><option value="250">2.50</option><option value="275">2.75</option><option value="300">3.00</option><option value="400">4.00</option><option value="500">5.00</option></select></td></tr>
+<tbody>
+<tr><td class="magic"><input onclick="changegrade2('old', -1)" value="-" type="button"></td><td>Previous Quarter's Grade</td><td>2</td><td><span id="old">1.00</span></td><td class="magic"><input onclick="changegrade2('old', 1)" value="+" type="button"></td></tr>
+<tr><td class="magic"><input onclick="changegrade2('new', -1)" value="-" type="button"></td><td>Present Quarter's Grade</td><td>1.7</td><td><span id="new">1.00</span></td><td class="magic"><input onclick="changegrade2('new', 1)" value="+" type="button"></td></tr>
 </tbody></table>
-<input onclick="verify()" value="Calculate" type="button">
 <br>
 <span id="gwa2" style="font-weight:bold;">0.00</span>
 </div>
