--- a/beta/index.html
+++ b/beta/index.html
@@ -31,7 +31,7 @@
 		}
 		getgwa();
 	}
-	function changegrade(subject, amt) {
+	function changegrade2(subject, amt) {
 		var value2 = parseFloat(document.getElementById(subject).innerHTML);
 		if (value2 + 0.25 * amt < 1) {
 			return 0;
@@ -128,7 +128,6 @@ background-size: cover;}
 <tr><td class="magic"><input onclick="changegrade('earthsci', -1)" value="-" type="button"></td><td>EarthSci</td><td>0.7</td><td><select id="earthsci"><option value="100" selected="selected">1.00</option><option value="125">1.25</option><option value="150">1.50</option><option value="175">1.75</option><option value="200">2.00</option><option value="225">2.25</option><option value="250">2.50</option><option value="275">2.75</option><option value="300">3.00</option><option value="400">4.00</option><option value="500">5.00</option></select></td></tr>
 </tbody></table>
 -->
-<br>
 <span id="gwa" style="font-weight:bold;">1.00</span>
 <hr>
 <table class="magic">
@@ -136,7 +135,6 @@ background-size: cover;}
 <tr><td class="magic"><input onclick="changegrade2('old', -1)" value="-" type="button"></td><td>Previous Quarter's Grade</td><td>2</td><td><span id="old">1.00</span></td><td class="magic"><input onclick="changegrade2('old', 1)" value="+" type="button"></td></tr>
 <tr><td class="magic"><input onclick="changegrade2('new', -1)" value="-" type="button"></td><td>Present Quarter's Grade</td><td>1.7</td><td><span id="new">1.00</span></td><td class="magic"><input onclick="changegrade2('new', 1)" value="+" type="button"></td></tr>
 </tbody></table>
-<br>
 <span id="gwa2" style="font-weight:bold;">0.00</span>
 </div>
 <br>
