--- a/beta/index.html
+++ b/beta/index.html
@@ -128,12 +128,12 @@ background-size: cover;}
 <tr><td class="magic"><input onclick="changegrade('earthsci', -1)" value="-" type="button"></td><td>EarthSci</td><td>0.7</td><td><select id="earthsci"><option value="100" selected="selected">1.00</option><option value="125">1.25</option><option value="150">1.50</option><option value="175">1.75</option><option value="200">2.00</option><option value="225">2.25</option><option value="250">2.50</option><option value="275">2.75</option><option value="300">3.00</option><option value="400">4.00</option><option value="500">5.00</option></select></td></tr>
 </tbody></table>
 -->
-<span id="gwa" style="font-weight:bold;">1.00</span>
+<span id="gwa" style="font-weight:bold;">1.0000</span>
 <hr>
-<table>
+<table class="magic">
 <tbody>
-<tr><td><input onclick="changegrade2('old', -1)" value="-" type="button"></td><td>Previous Quarter's Grade</td><td>2</td><td><span id="old">1.00</span></td><td><input onclick="changegrade2('old', 1)" value="+" type="button"></td></tr>
-<tr><td><input onclick="changegrade2('new', -1)" value="-" type="button"></td><td>Present Quarter's Grade</td><td>1.7</td><td><span id="new">1.00</span></td><td><input onclick="changegrade2('new', 1)" value="+" type="button"></td></tr>
+<tr><td class="magic"><input onclick="changegrade2('old', -1)" value="-" type="button"></td><td class="magic">Previous Quarter's Grade</td><td>2</td><td><span id="old">1.00</span></td><td class="magic"><input onclick="changegrade2('old', 1)" value="+" type="button"></td></tr>
+<tr><td class="magic"><input onclick="changegrade2('new', -1)" value="-" type="button"></td><td class="magic">Present Quarter's Grade</td><td>1.7</td><td><span id="new">1.00</span></td><td class="magic"><input onclick="changegrade2('new', 1)" value="+" type="button"></td></tr>
 </tbody></table>
 <span id="gwa2" style="font-weight:bold;">0.00</span>
 </div>
