--- a/beta/index.html
+++ b/beta/index.html
@@ -132,8 +132,8 @@ background-size: cover;}
 <hr>
 <table class="magic">
 <tbody>
-<tr><td class="magic"><input onclick="changegrade2('old', -1)" value="-" type="button"></td><td class="magic">Previous Quarter's Grade</td><td>2</td><td><span id="old">1.00</span></td><td class="magic"><input onclick="changegrade2('old', 1)" value="+" type="button"></td></tr>
-<tr><td class="magic"><input onclick="changegrade2('new', -1)" value="-" type="button"></td><td class="magic">Present Quarter's Grade</td><td>1.7</td><td><span id="new">1.00</span></td><td class="magic"><input onclick="changegrade2('new', 1)" value="+" type="button"></td></tr>
+<tr><td class="magic"><input onclick="changegrade2('old', -1)" value="-" type="button"></td><td class="magic">Previous Quarter's Grade</td><td class="magic"><span id="old">1.00</span></td><td class="magic"><input onclick="changegrade2('old', 1)" value="+" type="button"></td></tr>
+<tr><td class="magic"><input onclick="changegrade2('new', -1)" value="-" type="button"></td><td class="magic">Present Quarter's Grade</td><td class="magic"><span id="new">1.00</span></td><td class="magic"><input onclick="changegrade2('new', 1)" value="+" type="button"></td></tr>
 </tbody></table>
 <span id="gwa2" style="font-weight:bold;">0.00</span>
 </div>
