--- a/no2es.html
+++ b/no2es.html
@@ -128,11 +128,11 @@
         return grade2 * unit;
     }
     function getgwa() {
-        var final = (get("is", 2) + get("math", 1.7) + get("english", 1.3) + get("filipino", 1) + get("socsci", 1) + get("pehm", 0.99) + get("valed", .7) + get("adtech", 1) + get("compsci", 1) / 10.69;
+        var final = (get("is", 2) + get("math", 1.7) + get("english", 1.3) + get("filipino", 1) + get("socsci", 1) + get("pehm", 0.99) + get("valed", .7) + get("adtech", 1) + get("compsci", 1)) / 10.69;
         document.getElementById("gwa").innerHTML = final.toPrecision(5);
     }
 	function getgwa2() {
-        var final = (get3("is", 2) + get3("math", 1.7) + get3("english", 1.3) + get3("filipino", 1) + get3("socsci", 1) + get3("pehm", 0.99) + get3("valed", .7) + get3("adtech", 1) + get3("compsci", 1) / 10.69;
+        var final = (get3("is", 2) + get3("math", 1.7) + get3("english", 1.3) + get3("filipino", 1) + get3("socsci", 1) + get3("pehm", 0.99) + get3("valed", .7) + get3("adtech", 1) + get3("compsci", 1)) / 10.69;
         document.getElementById("gwa3").innerHTML = final.toPrecision(5);
     }
 	
