--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 -->
 <title>5.00</title>
 </head><body style="margin:0;">
-<iframe src="gwa-calc/index.html" style="border: 0; width: 100%; height: 100%"></iframe>
+<iframe src="gwa-calc/index.html" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
 </body></html>
