--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>5.00</title>
+<script type="text/javascript">
+  function init(){
+    window.location = "https://3liteking148.github.io/gwa-calc/";
+  }
+  
+  window.onload = init;
 </head><body style="margin:0;">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<iframe src="gwa-calc/index.html" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
 </body></html>
