--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>5.00</title>
 <script type="text/javascript">
   function init(){
-    window.location = "https://3liteking148.github.io/gwa-calc/";
+    window.location.href = "https://3liteking148.github.io/gwa-calc/";
   }
   
   window.onload = init;
