--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>5.00</title>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<head>
 <script type="text/javascript">
   function init(){
     window.location.href = "https://3liteking148.github.io/gwa-calc/";
@@ -9,5 +8,7 @@
   
   window.onload = init;
 </script>
-</head><body style="margin:0;">
-</body></html>
+</head>
+<body>
+</body>
+</html>
